--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	"dependencies" : 
 	{
 		"log4js" : "0.5.x",
-		"express" : "3.x"
+		"express" : "3.x",
+		"lockfile" : "0.2.x",
+		"uuid-js" : "0.7.x"
 	},
 	"main" : "./index.js"
 }
