--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	{
 		"log4js" : "0.5.x",
 		"express" : "3.x",
-		"uuid-js" : "0.7.x"
+		"uuid-js" : "0.7.x",
+		"func-sequence" : "0.2.x",
 	},
 	"main" : "./index.js"
 }
