--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
 	"version" : "0.1.0",
 	"author" : "Terry King <terrykingcha@gmail.com>",
 	"description" : "wenzisha server",
-	"keywords" :[
+	"keywords" : [
 		"wenzisha"
 	],
 	"license" : "MIT",
-	"repository" : 
-	{
+	"repository" : {
 		"type" : "git",
 		"url" : "git@github.com:ShaTeam/wenzisha_server.git"
 	},
-	"dependencies" : 
-	{
+	"dependencies" : {
 		"log4js" : "0.5.x",
 		"express" : "3.x",
 		"uuid-js" : "0.7.x",
-		"func-sequence" : "0.2.x",
+		"func-sequence" : "0.2.x"
 	},
 	"main" : "./index.js"
 }
